[package]
name = "polkadot-rpc"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-chain-spec = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-babe-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-epochs = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-finality-grandpa = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-finality-grandpa-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-sync-state-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-mmr-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
beefy-gadget = { git = "https://github.com/compound-finance/grandpa-bridge-gadget", branch = "gateway" }
beefy-gadget-rpc = { git = "https://github.com/compound-finance/grandpa-bridge-gadget", branch = "gateway" }
