[package]
name = "polkadot-client"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
frame-system-rpc-runtime-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-storage = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-session = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-authority-discovery = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-finality-grandpa = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-service = { git = "https://github.com/compound-finance/substrate", branch = "gateway", default-features = false }

pallet-mmr-primitives = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

beefy-primitives = { git = "https://github.com/compound-finance/grandpa-bridge-gadget", branch = "gateway" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot" }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
kusama = [ "kusama-runtime" ]
rococo = [ "rococo-runtime" ]
westend = [ "westend-runtime" ]
