[package]
name = "polkadot-node-metrics"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.15"
futures-timer = "3.0.2"

metered-channel = { path = "../metered-channel"}

sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-application-crypto = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-prometheus-endpoint = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

jemalloc-ctl = { version = "0.3.3", optional = true }

[features]
default = []
memory-stats = ["jemalloc-ctl"]
