[package]
name = "polkadot-node-primitives"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
bounded-vec = "0.4"
futures = "0.3.15"
polkadot-primitives = { path = "../../primitives" }
polkadot-statement-table = { path = "../../statement-table" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/compound-finance/substrate", branch = "gateway", default-features = false }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-application-crypto = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-vrf = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-maybe-compressed-blob  = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
polkadot-parachain = { path = "../../parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.26"
tracing = "0.1.26"
serde = { version = "1.0.130", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = "0.6.0"
