[package]
name = "polkadot-service"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
babe = { package = "sc-consensus-babe", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
beefy-primitives = { git = "https://github.com/compound-finance/grandpa-bridge-gadget", branch = "gateway" }
beefy-gadget = { git = "https://github.com/compound-finance/grandpa-bridge-gadget", branch = "gateway" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-chain-spec = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-db = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-uncles = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-slots = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-sync-state-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-basic-authorship = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
service = { package = "sc-service", git = "https://github.com/compound-finance/substrate", branch = "gateway", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
consensus_common = { package = "sp-consensus", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
inherents = { package = "sp-inherents", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-io = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-session = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-storage = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-trie = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-timestamp = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-state-machine = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-im-online = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-staking = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-mmr-primitives = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# External Crates
futures = "0.3.15"
hex-literal = "0.3.3"
tracing = "0.1.26"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.26"
kvdb = "0.10.0"
kvdb-rocksdb = { version = "0.14.0", optional = true }
async-trait = "0.1.51"

# Polkadot
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-overseer = { path = "../overseer" }
polkadot-client = { path = "../client" }
polkadot-parachain = { path = "../../parachain" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-node-network-protocol = { path = "../network/protocol" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot" }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { path = "../network/approval-distribution", optional = true }
polkadot-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
polkadot-availability-distribution = { path = "../network/availability-distribution", optional = true }
polkadot-availability-recovery = { path = "../network/availability-recovery", optional = true }
polkadot-collator-protocol = { path = "../network/collator-protocol", optional = true }
polkadot-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
polkadot-gossip-support = { path = "../network/gossip-support", optional = true }
polkadot-network-bridge = { path = "../network/bridge", optional = true }
polkadot-node-collation-generation = { path = "../collation-generation", optional = true }
polkadot-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
polkadot-node-core-av-store = { path = "../core/av-store", optional = true }
polkadot-node-core-backing = { path = "../core/backing", optional = true }
polkadot-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
polkadot-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
polkadot-node-core-chain-api = { path = "../core/chain-api", optional = true }
polkadot-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
polkadot-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
polkadot-node-core-dispute-participation = { path = "../core/dispute-participation", optional = true }
polkadot-node-core-provisioner = { path = "../core/provisioner", optional = true }
polkadot-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
polkadot-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../test/client" }
polkadot-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
log = "0.4.14"
assert_matches = "1.5.0"

[features]
default = ["db", "full-node"]

db = [
	"service/db"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-dispute-participation",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"kvdb-rocksdb"
]

light-node = []

# Configure the native runtimes to use. Polkadot is always enabled by default.
#
# Validators require the native runtime currently
kusama-native = [ "kusama-runtime", "polkadot-client/kusama" ]
westend-native = [ "westend-runtime", "polkadot-client/westend" ]
rococo-native = [ "rococo-runtime", "polkadot-client/rococo" ]

runtime-benchmarks = [
	"polkadot-runtime/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
	"rococo-runtime/runtime-benchmarks"
]
try-runtime = [
	"polkadot-runtime/try-runtime",
	"kusama-runtime/try-runtime",
	"westend-runtime/try-runtime",
	"rococo-runtime/try-runtime",
]
malus = ["full-node"]
memory-stats = ["polkadot-overseer/memory-stats"]
disputes = ["polkadot-node-core-dispute-coordinator/disputes"]
