[package]
name = "polkadot-node-core-provisioner"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
futures = "0.3.15"
tracing = "0.1.26"
thiserror = "1.0.26"
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
futures-timer = "3.0.2"

[dev-dependencies]
sp-application-crypto = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
