[package]
name = "polkadot-availability-distribution"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
tracing = "0.1.26"
parity-scale-codec = { version = "2.0.0", features = ["std"]  }
polkadot-primitives = { path = "../../../primitives" }
polkadot-erasure-coding = { path = "../../../erasure-coding" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../subsystem" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-core-runtime-api = { path = "../../core/runtime-api" }
sp-application-crypto = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway", features = ["std"]  }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
thiserror = "1.0.26"
rand = "0.8.3"
derive_more = "0.99.11"
lru = "0.6.6"

[dev-dependencies]
polkadot-subsystem-testhelpers = { package = "polkadot-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway", features = ["std"] }
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
futures-timer = "3.0.2"
assert_matches = "1.4.0"
maplit = "1.0"
