[package]
name = "polkadot-statement-distribution"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Statement Distribution Subsystem"
edition = "2018"

[dependencies]
futures = "0.3.15"
tracing = "0.1.26"
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/compound-finance/substrate", branch = "gateway", default-features = false }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.7.0"
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
derive_more = "0.99.11"
thiserror = "1.0.26"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-application-crypto = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
futures-timer = "3.0.2"
