[package]
name = "polkadot-test-client"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-service = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-timestamp = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-state-machine = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
futures = "0.3.15"
