[package]
name = "polkadot-test-service"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.3"
tracing = "0.1.26"
rand = "0.8.3"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-authority-discovery = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
babe = { package = "sc-consensus-babe", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
consensus_common = { package = "sp-consensus", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
frame-benchmarking = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
frame-system = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
inherents = { package = "sp-inherents", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-staking = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-balances = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-chain-spec = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-cli = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
service = { package = "sc-service", git = "https://github.com/compound-finance/substrate", branch = "gateway", default-features = false }
sp-arithmetic = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-state-machine = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-test-client = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/compound-finance/substrate", branch = "gateway", default-features = false }
serde_json = "1.0.66"
substrate-test-utils = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
tokio = { version = "1.10", features = ["macros"] }
