[package]
name = "polkadot-simnet-test"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate primitives
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# frame pallets
system = { package = "frame-system", git = "https://github.com/compound-finance/substrate", branch = "gateway" }
balances = { package = "pallet-balances", git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# substrate client libs
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# polkadot deps
polkadot-simnet = { path = "../common" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
